modules_v3/lightbox/css/album_page.css
/**
 * Lightbox Album module for webtrees
 *
 * Display media Items using Lightbox
  *
 * webtrees: Web based Family History software
 * Copyright (C) 2010 webtrees development team.
 *
 * Derived from PhpGedView
 * Copyright (C) 2002 to 2007 John Finlay and Others
 *
 * This program is free software;  you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation;  either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY;  without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program;  if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * @package webtrees
 * @subpackage Modules
 * @version $Id$
 */
 
/* lightbox_plus.css version 3.00  29/06/2007  */
#lightbox{margin-bottom:100px;}
#lightbox .descriptionbox span{margin:0 20px;}
.lb_notes:target,.lb_notes:target a{background-color:#ffc; color:#000;}
.prvpic{background-color:#999; border:1px; border-color:#000; border-style:solid; height:80px; margin-top:0; width:60px;}
.prvpic img{border:0; border-style:dotted; padding:0;}
.pic{border:0; border-color:#fff; border-style:solid; padding:0;}
.thumbcontainer{display:block; width:100%;}
#lb_icons{text-align:justify;}
#thumblist_1,#thumblist_2,#thumblist_3,#thumblist_4,#thumblist_5,#thumblist_1a,#thumblist_2a,#thumblist_3a,#thumblist_4a,#thumblist_5a{display:block; float:left; list-style-type:none;}
#thumblist_1 li,#thumblist_2 li,#thumblist_3 li,#thumblist_4 li,#thumblist_5 li,#thumblist_1a li,#thumblist_2a li,#thumblist_3a li,#thumblist_4a li,#thumblist_5a li{display:block; float:left; list-style-type:none; margin-right:5px; padding-bottom:0; padding-left:4px; padding-right:4px;}
li.li_norm{border:2px solid transparent;}
li.li_new{border:2px solid #00f;}
li.li_old{border:2px solid red;}
#thumblist_1 a img,#thumblist_2 a img,#thumblist_3 a img,#thumblist_4 a img,#thumblist_5 a img,#thumblist_1a a img,#thumblist_2a a img,#thumblist_3a a img,#thumblist_4a a img,#thumblist_5a a img{border:1px; border-style:none; padding:1px;}
#thumblist_1 a:hover img,#thumblist_2 a:hover img,#thumblist_3 a:hover img,#thumblist_4 a:hover img,#thumblist_5 a:hover img,#thumblist_1a a:hover img,#thumblist_2a a:hover img,#thumblist_3a a:hover img,#thumblist_4a a:hover img,#thumblist_5a a:hover img{background-color:#BDB071; border:0; border-style:none; padding:1px;}
.clearlist:after{clear:both; content:"."; display:block; height:0; visibility:hidden;}
/* Hides from IE-mac \ */
* html .clearfix{height:1%;}
#clearlist{display:block;}
/* RTL changes */
html[dir='rtl'] #thumblist_1,html[dir='rtl'] #thumblist_2,html[dir='rtl'] #thumblist_3,html[dir='rtl'] #thumblist_4,html[dir='rtl'] #thumblist_5,html[dir='rtl'] #thumblist_1a,html[dir='rtl'] #thumblist_2a,html[dir='rtl'] #thumblist_3a,html[dir='rtl'] #thumblist_4a,html[dir='rtl'] #thumblist_5a{float:right;}
html[dir='rtl'] #thumblist_1 li,html[dir='rtl'] #thumblist_2 li,html[dir='rtl'] #thumblist_3 li,html[dir='rtl'] #thumblist_4 li,html[dir='rtl'] #thumblist_5 li,html[dir='rtl'] #thumblist_1a li,html[dir='rtl'] #thumblist_2a li,html[dir='rtl'] #thumblist_3a li,html[dir='rtl'] #thumblist_4a li,html[dir='rtl'] #thumblist_5a li{float:right; margin-left:5px;}

/* clearbox.css a ClearBox scripthez :: http://www.kreatura.hu/pyro/clearbox */
#CB_ShowTh,#CB_Thumbs2,#CB_Thumbs,.CB_RoundPixBugFix,#CB_Padding,#CB_ImgContainer,#CB_PrevNext,#CB_ContentHide,#CB_LoadingImage,#CB_Text,#CB_Window,#CB_Image,#CB_TopLeft,#CB_Top,#CB_TopRight,#CB_Left,#CB_Content,#CB_Right,#CB_BtmLeft,#CB_Btm,#CB_BtmRight,#CB_Prev,#CB_Next,#CB_Prev:hover,#CB_Next:hover,#CB_CloseWindow,#CB_SlideShowS,#CB_SlideShowP,#CB_SlideShowBar,#CB_Email{background-color:transparent; border:0; margin:0; padding:0;}
#CB_ImgHide{left:0; position:absolute; visibility:hidden; z-index:1098;}
#CB_ShowTh{height:15%; left:0; position:absolute; top:0; visibility:hidden; width:100%; z-index:1097;}
#CB_ShowEtc{height:15%; left:0; position:absolute; top:15px; visibility:hidden; width:100%; z-index:1097;}
#CB_Etc{background-color:#fff; display:none; height:60px; left:0; overflow:hidden; padding-top:10px; position:absolute; text-align:center; top:20px; z-index:1100;}
#CB_Thumbs{background-color:#777; display:none; height:60px; left:0; overflow:hidden; padding-top:10px; position:absolute; top:10px; z-index:1100;}
#CB_Thumbs2{height:50px; position:absolute;}
.CB_ThumbsImg{position:absolute;}
.CB_RoundPixBugFix{display:block; font-family:arial; font-size:1pt; visibility:hidden;}
#CB_ImgContainer{position:relative; width:100%;}
#CB_PrevNext{height:100%; left:0; position:absolute; top:0; width:100%; z-index:1002;}
#CB_ContentHide{left:0; position:absolute; top:0; z-index:1000;}
#CB_LoadingImage{left:50%; margin-left:-12px; margin-top:-12px; position:absolute; top:50%; visibility:hidden;}
#CB_Text{color:#00F; margin-top:4px; position:relative; text-align:center; top:-6px;}
#CB_DetailText,#CB_NoteText{background-color:#FFF; color:#80F; font-weight:300; margin-bottom:6px; margin-top:-3px; padding-bottom:4px; text-align:center; width:5px;}
#CB_DetailText a,#CB_NoteText a,#CB_Txt2 a{color:#888;}
#CB_DetailText a:hover,#CB_NoteText a:hover,#CB_Txt2 a:hover{color:#A00;}
#CB_NavBar table{background-color:#FFF; color:#80F; font-weight:300; margin-bottom:3px; margin-top:-4px; padding-bottom:4px; text-align:center;}
#CB_NavBar table td img{border:0;}
#CB_Window{left:50%; position:absolute; top:50%; visibility:hidden; z-index:1100;}
#CB_Image{position:relative;}
#CB_iFrame{height:0; position:absolute; width:0; z-index:1003;}
#CB_UrlNotes{background:#ff8; border:blue solid 1px; color:#F0F; height:0; position:absolute; width:0; z-index:1010;}
#CB_TopLeft{background-image:url(../pic/s_corners.png); background-position:top left;}
#CB_TopRight{background-image:url(../pic/s_corners.png); background-position:top right;}
#CB_BtmLeft{background-image:url(../pic/s_corners.png); background-position:bottom left;}
#CB_BtmRight{background-image:url(../pic/s_corners.png); background-position:bottom right;}
#CB_Prev,#CB_Next{background:transparent; cursor:pointer; display:block; outline-style:none; width:49%; z-index:1102;}
.CB_TextNav{color:#aaa; margin-left:30px; margin-right:30px; text-decoration:underline;}
.CB_TextNav:hover{color:#f70; margin-left:30px; margin-right:30px; text-decoration:none;}
#CB_Prev{float:left; left:0;}
#CB_Next{float:right; left:0;}
#CB_Prev:hover{background:transparent url(../pic/prev.png) no-repeat scroll left 50%;}
#CB_Next:hover{background:transparent url(../pic/next.png) no-repeat scroll right 50%;}
#CB_NavBar{position:relative; top:10px;}
#CB_SlideShowS,#CB_SlideShowP{cursor:pointer; left:2px; position:absolute; top:2px; z-index:1104;}
#CB_CloseWindow{cursor:pointer; position:absolute; right:2px; top:1px; z-index:1104;}
#CB_SlideShowBar{display:none; height:5px; left:2px; position:absolute; top:5px; width:0;}
#CB_Email{position:absolute; right:15px;}
#CB_Top,#CB_Left,#CB_Content,#CB_Right,#CB_Btm{background-color:#FFF;}
#CB_MusicOn,#CB_MusicOff,#CB_Speak,#CB_Speaker{cursor:pointer; left:28px; position:absolute; top:0; z-index:1104;}
#CB_ZoomOn,#CB_ZoomOff{cursor:pointer; position:absolute; right:28px; top:-1px; z-index:1104;}
/* RTL changes */
html[dir='rtl'] 
html[dir='rtl'] #CB_ImgHide{left:auto; right:0;}
html[dir='rtl'] #CB_ShowTh{left:auto; right:0;}
html[dir='rtl'] #CB_ShowEtc{left:auto; right:0;}
html[dir='rtl'] #CB_PrevNext{left:auto; right:0;}
html[dir='rtl'] #CB_ContentHide{left:auto; right:0;}
html[dir='rtl'] #CB_LoadingImage{left:auto; right:50%; margin-right:-12px;}
html[dir='rtl'] #CB_TopLeft{background-image:url(../pic/s_corners.png); background-position:top right;}
html[dir='rtl'] #CB_TopRight{background-image:url(../pic/s_corners.png); background-position:top left;}
html[dir='rtl'] #CB_BtmLeft{background-image:url(../pic/s_corners.png); background-position:bottom right;}
html[dir='rtl'] #CB_BtmRight{background-image:url(../pic/s_corners.png); background-position:bottom left;}
html[dir='rtl'] #CB_SlideShowS,html[dir='rtl'] #CB_SlideShowP{right:auto; left:2px;}
html[dir='rtl'] #CB_CloseWindow{left:auto; right:2px;}
html[dir='rtl'] #CB_SlideShowBar{display:none; right:auto; left:2px;}
html[dir='rtl'] #CB_Email{left:auto; right:15px;}
html[dir='rtl'] #CB_MusicOn,html[dir='rtl'] #CB_MusicOff,html[dir='rtl'] #CB_Speak,html[dir='rtl'] #CB_Speaker{right:auto; left:28px;}
html[dir='rtl'] #CB_ZoomOn,html[dir='rtl'] #CB_ZoomOff{left:auto; right:28px;}

